# turbo-monorepo-with-multi-language

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: CI.yml
apps/express/: index.ts  package.json
apps/web/: next.config.js  package.json  tsconfig.json
apps/web/app/: action.ts  page.tsx
crates/native/: Cargo.toml  index.d.ts  index.js  index.mjs  package.json
crates/native/npm/android-arm-eabi/: README.md  package.json
crates/native/npm/android-arm64/: README.md  package.json
crates/native/npm/darwin-universal/: README.md  package.json
crates/native/npm/freebsd-x64/: README.md  package.json
crates/native/npm/linux-arm-gnueabihf/: README.md  package.json
crates/native/npm/linux-arm-musleabihf/: README.md  package.json
crates/native/npm/linux-arm64-gnu/: README.md  package.json
crates/native/npm/linux-arm64-musl/: README.md  package.json
crates/native/npm/linux-riscv64-gnu/: README.md  package.json
crates/native/npm/linux-x64-musl/: README.md  package.json
crates/native/npm/win32-arm64-msvc/: README.md  package.json
crates/native/npm/win32-ia32-msvc/: README.md  package.json
crates/native/src/: lib.rs
